--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>The Boys</title>
+	</head>
+	<body>
+		<div class="container">
+			<div
+				class="panel active"
+				style="background-image: url('assets/Billy_Butcher_S2.jpg')"
+			>
+				<h3>Billy Butcher</h3>
+			</div>
+			<div
+				class="panel"
+				style="background-image: url('assets/Hughie_Campbell_S2.jpg')"
+			>
+				<h3>Hughie Campbell</h3>
+			</div>
+			<div
+				class="panel"
+				style="background-image: url('assets/Mothers_Milk_S2.jpg')"
+			>
+				<h3>Mother's Milk</h3>
+			</div>
+			<div
+				class="panel"
+				style="background-image: url('assets/Frenchie_S2.jpg')"
+			>
+				<h3>The Frenchman</h3>
+			</div>
+			<div
+				class="panel"
+				style="background-image: url('assets/The_Female_S2.jpg')"
+			>
+				<h3>The Female</h3>
+			</div>
+		</div>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous"> -->
-	<link rel="stylesheet" href="style.css" />
-	<title>The Boys</title>
-</head>
-<div class="container">
-	<div class="panel active" style="background-image: url('/assets/Billy_Butcher_S2.jpg')">
-		<h3>Billy Butcher</h3>
-	</div>
-	<div class="panel" style="background-image: url('/assets/Hughie_Campbell_S2.jpg')">
-		<h3>Hughie Campbell</h3>
-	</div>
-	<div class="panel" style="background-image: url('/assets/Mothers_Milk_S2.jpg')">
-		<h3>Mother's Milk</h3>
-	</div>
-	<div class="panel" style="background-image: url('/assets/Frenchie_S2.jpg')">
-		<h3>The Frenchman</h3>
-	</div>
-	<div class="panel" style="background-image: url('/assets/The_Female_S2.jpg')">
-		<h3>The Female</h3>
-	</div>
-</div>
-
-<script src="script.js"></script>
-
-<body></body>
-
+		<script src="script.js"></script>
+	</body>
 </html>
